// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to input a value 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 bBuInq"
          role="button"
        >
          Simple
        </span>
        <label
          class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
        >
          <input
            checked=""
            class="Toggle__Input-sc-6s3wfu-1 utRNX"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-2 giHppe"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 faOaTv"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="InputCurrency"
            type="text"
            value="0.447"
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
        >
          <div
            class=""
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex flex-col justify-between border-l h-14 -mr-4 w-10 text-theme-secondary-700 dark:border-theme-secondary-700 border-theme-secondary-400"
              >
                <button
                  class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 bwAUBK"
                  data-testid="InputFeeAdvanced__up"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AkeAK"
                    height="10"
                    width="10"
                  >
                    <svg>
                      chevron-up-small.svg
                    </svg>
                  </div>
                </button>
                <button
                  class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 gmyhdQ"
                  data-testid="InputFeeAdvanced__down"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AkeAK"
                    height="10"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should display converted value when on live net 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 bBuInq"
          role="button"
        >
          Simple
        </span>
        <label
          class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
        >
          <input
            checked=""
            class="Toggle__Input-sc-6s3wfu-1 utRNX"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-2 giHppe"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 faOaTv"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="InputCurrency"
            type="text"
            value="0.3"
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
        >
          <div
            class=""
          >
            <div
              class="flex items-center"
            >
              <div
                class="mr-3 text-sm font-semibold whitespace-no-break text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="AmountFiat"
                >
                  €0.00
                </span>
              </div>
              <div
                class="flex flex-col justify-between border-l h-14 -mr-4 w-10 text-theme-secondary-700 dark:border-theme-secondary-700 border-theme-secondary-400"
              >
                <button
                  class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 bwAUBK"
                  data-testid="InputFeeAdvanced__up"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AkeAK"
                    height="10"
                    width="10"
                  >
                    <svg>
                      chevron-up-small.svg
                    </svg>
                  </div>
                </button>
                <button
                  class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 gmyhdQ"
                  data-testid="InputFeeAdvanced__down"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AkeAK"
                    height="10"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should display converted values when on live net 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 faOaTv"
          role="button"
        >
          Simple
        </span>
        <label
          class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-1 utRNX"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-2 giHppe"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bBuInq"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="AmountFiat"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="AmountFiat"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="AmountFiat"
          >
            €0.00
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should keep different values for simple and advanced view types 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 bBuInq"
          role="button"
        >
          Simple
        </span>
        <label
          class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-1 utRNX"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-2 giHppe"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 faOaTv"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="InputCurrency"
            type="text"
            value="0.3"
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
        >
          <div
            class=""
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex flex-col justify-between border-l h-14 -mr-4 w-10 text-theme-secondary-700 dark:border-theme-secondary-700 border-theme-secondary-400"
              >
                <button
                  class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 bwAUBK"
                  data-testid="InputFeeAdvanced__up"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AkeAK"
                    height="10"
                    width="10"
                  >
                    <svg>
                      chevron-up-small.svg
                    </svg>
                  </div>
                </button>
                <button
                  class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 gmyhdQ"
                  data-testid="InputFeeAdvanced__down"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AkeAK"
                    height="10"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should keep different values for simple and advanced view types 2`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 faOaTv"
          role="button"
        >
          Simple
        </span>
        <label
          class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-1 utRNX"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-2 giHppe"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bBuInq"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 faOaTv"
          role="button"
        >
          Simple
        </span>
        <label
          class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-1 utRNX"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-2 giHppe"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bBuInq"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render disabled 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 iqZIWh"
      disabled=""
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
          data-testid="InputCurrency"
          disabled=""
          type="text"
          value="0.3"
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
      >
        <div
          class=""
        >
          <div
            class="flex items-center"
          >
            <div
              class="flex flex-col justify-between border-l h-14 -mr-4 w-10 text-theme-secondary-700 dark:border-theme-secondary-700 border-theme-secondary-300"
            >
              <button
                class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 bwAUBK"
                data-testid="InputFeeAdvanced__up"
                disabled=""
                type="button"
              >
                <div
                  class="sc-bdnxRM AkeAK"
                  height="10"
                  width="10"
                >
                  <svg>
                    chevron-up-small.svg
                  </svg>
                </div>
              </button>
              <button
                class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 gmyhdQ"
                data-testid="InputFeeAdvanced__down"
                disabled=""
                type="button"
              >
                <div
                  class="sc-bdnxRM AkeAK"
                  height="10"
                  width="10"
                >
                  <svg>
                    chevron-down-small.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should update value when clicking button Average 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 faOaTv"
          role="button"
        >
          Simple
        </span>
        <label
          class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-1 utRNX"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-2 giHppe"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bBuInq"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should update value when clicking button Fast 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 faOaTv"
          role="button"
        >
          Simple
        </span>
        <label
          class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-1 utRNX"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-2 giHppe"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bBuInq"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should update value when clicking button Slow 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 faOaTv"
          role="button"
        >
          Simple
        </span>
        <label
          class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-1 utRNX"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-2 giHppe"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bBuInq"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
